--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    font-family: var(--font-exo-2)
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-jetbrains-mono)
+}
+
+h1 {
+    @apply text-4xl
+}
+
+h2 {
+    @apply text-3xl
+}
+
+h3 {
+    @apply text-2xl
+}
+
+p {
+    @apply text-large
+}
