--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,11 +9,11 @@
 
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-jetbrains-mono);
-    @apply pt-4
+    @apply pt-4 pb-2
 }
 
 h1 {
-    @apply text-4xl
+    @apply text-4xl md:text-6xl
 }
 
 h2 {
