--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,10 @@
     font-family: var(--font-exo-2)
 }
 
+.fade-in {
+    opacity: 0
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-jetbrains-mono);
     @apply pt-4 pb-2
